syntax = "proto3";


option go_package = "github.com/eolinker/eosc/process-helper";
package process_helper;

message installExtender {
  repeated ExtenderBasicInfo extends = 1;
}

message ExtenderBasicInfo {
  string id = 1; // {group}:{project}:{version}
  string name = 2; // {group}:{project}
  string group = 3;
  string project = 4;
  string version = 5;
}

message Extenders {
  repeated ExtenderMsg extenders = 1;
}

message ExtenderMsg {
  ExtenderBasicInfo basicInfo = 1;
  repeated PluginMsg plugins = 2;
}

message PluginMsg {
  string id = 1; // {group}:{project}:{name}
  string name = 2;
  string group = 3;
  string project = 4;
}